# bcm-lib

./: CMakeLists.txt  README.md  annotated.html  annotated_dup.js  bcmlib_8h.html  bcmlib_8h__incl.map  bcmlib_8h__incl.md5  bcmlib_8h_source.html  classes.html  cmac_8c.html  cmac_8c.js  cmac_8c__incl.map  cmac_8c__incl.md5  cmac_8h.html  cmac_8h.js  cmac_8h__dep__incl.map  cmac_8h__dep__incl.md5  cmac_8h_source.html  cmc_8c.html  cmc_8c.js  cmc_8c__incl.map  cmc_8c__incl.md5  cmc_8h.html  cmc_8h.js  cmc_8h__dep__incl.map  cmc_8h__dep__incl.md5  cmc_8h_source.html  dec_8c.html  dec_8c.js  dec_8c__incl.map  dec_8c__incl.md5  dec_8h.html  dec_8h.js  dec_8h__dep__incl.map  dec_8h__dep__incl.md5  dec_8h_source.html  dir_000000_000002.html  dir_000007_000000.html  dir_000008_000000.html  dir_000009_000000.html  (+103 more)
.github/workflows/: publish-documentation.yml  run-tests.yml
docs/: CMakeLists.txt  Doxyfile.in
include/: bcmlib.h
include/common/: utils.h
include/modes/cmac/: cmac.h
include/modes/cmc/: cmc.h
include/modes/dec/: dec.h
include/modes/heh/: heh.h
include/modes/xts/: xts.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_1.js  variables_2.js
src/common/: utils.c
src/modes/cmac/: cmac.c
src/modes/cmc/: cmc.c
src/modes/dec/: dec.c
src/modes/heh/: heh.c
src/modes/xts/: xts.c
tests/: CMakeLists.txt  CmakeLists.txt
tests/cases/: cmac_kuznyechik.cpp  cmc_kuznyechik.cpp  dec_kuznyechik.cpp  heh_kuznyechik.cpp  xts_kuznyechik.cpp
tests/coverage/: coverage.cmd.in
tests/include/: test_common.hpp  test_data.hpp  test_utils.hpp
